Разработал эндпоинты для добавление и удаления тегов у стораджа.
